--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta name="author" content="Anthony Cortez">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Facebook Meta Tags -->
-        <meta property="og:url"                content="https://iamtonysoft.github.io/" />
+        <meta property="og:url"                content="https://alcortez-code.github.io/" />
         <meta property="og:type"               content="website" />
-        <meta property="og:title"              content="TONYSOFT" />
+        <meta property="og:title"              content="alcortez" />
         <meta property="og:description"        content="Internet is my bestfriend..." />
         <meta property="og:image"              content="https://s-media-cache-ak0.pinimg.com/originals/5f/d0/98/5fd09817be8a9f5889064ac8bad39961.jpg" />
     </head>
@@ -24,7 +24,7 @@
             <div class="uk-hidden@m">
                 <nav class="uk-navbar uk-navbar-container uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
                      <div class="uk-navbar-center">
-                        <a class="uk-navbar-item uk-logo text-cursive" href="https://iamtonysoft.github.io" uk-scroll>TONYSOFT</a> 
+                        <a class="uk-navbar-item uk-logo text-cursive" href="https://alcortez-code.github.io" uk-scroll>TONYSOFT</a> 
                     </div> 
                     <div class="uk-navbar-right">
                         <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-usage" uk-toggle></a>
@@ -43,12 +43,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <a class="uk-navbar-item uk-logo text-cursive" href="#top" uk-scroll>TONYSOFT</a>
+                        <a class="uk-navbar-item uk-logo text-cursive" href="#top" uk-scroll>ALCORTEZ</a>
                         <div class="uk-navbar-center-right">
                             <div>
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#certification" uk-scroll>Certification</a></li>
-                                    <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="https://alcortez-code.github.io/blog/" target="_blank">Blog</a></li>
                                     <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
@@ -71,8 +71,7 @@
                                 <footer>Hikigaya Hachiman</footer>
                             </blockquote> 
                             <div class="uk-inline">
-                                <a href="https://github.com/iamtonysoft" class="uk-icon-button uk-margin-small-right" uk-icon="icon: github"></a>
-                                <a href="https://www.facebook.com/iamtonysoft" class="uk-icon-button  uk-margin-small-right" uk-icon="icon: facebook"></a>
+                                <a href="https://github.com/alcortez-code" class="uk-icon-button uk-margin-small-right" uk-icon="icon: github"></a>
                                 <a href="https://www.linkedin.com/in/iamtonysoft/" class="uk-icon-button" uk-icon="icon: linkedin"></a>
                             </div>
                         </div>
@@ -204,14 +203,14 @@
                     <div class="uk-container">
                         <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                             <div class="uk-text-center uk-text-center@s uk-position-center">
-                                <h3 class="uk-heading-line"><span class="text-cursive">TONYSOFT</span></h3>
+                                <h3 class="uk-heading-line"><span class="text-cursive">ALCORTEZ</span></h3>
                                 <ul id="menu-list" class="uk-list">
-                                    <li><a href="https://iamtonysoft.github.io">Home</a></li>
+                                    <li><a href="https://alcortez-code.github.io">Home</a></li>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#experience">Experience</a></li>
                                     <li><a href="#skills">Skills</a></li>
                                     <li><a href="#certification">Certification</a></li>
-                                    <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="https://alcortez-code.github.io/blog/" target="_blank">Blog</a></li>
                                     <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
