--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="uk-hidden@m">
                 <nav class="uk-navbar uk-navbar-container uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
                      <div class="uk-navbar-center">
-                        <a class="uk-navbar-item uk-logo text-cursive" href="https://alcortez-code.github.io" uk-scroll>TONYSOFT</a> 
+                        <a class="uk-navbar-item uk-logo text-cursive" href="https://alcortez-code.github.io" uk-scroll>AL CORTEZ</a> 
                     </div> 
                     <div class="uk-navbar-right">
                         <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-usage" uk-toggle></a>
