--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Tonysoft</title>
+        <title>I am Tony</title>
         <link rel="stylesheet" href="app/dist/css/app.bundle.css">
         <meta name="description" content="Anthony Cortez Portfolio">
         <meta name="keywords" content="HTML,CSS,XML,JavaScript, Web Development, Software Engineer, Programmer">
