Update webpack config and contents

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>I am Tony</title>
+        <title>I AM TONY</title>
         <link rel="stylesheet" href="app/dist/css/app.bundle.css">
         <meta name="description" content="Anthony Cortez Portfolio">
         <meta name="keywords" content="HTML,CSS,XML,JavaScript, Web Development, Software Engineer, Programmer">
         <meta name="author" content="Anthony Cortez">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Facebook Meta Tags -->
-        <meta property="og:url"                content="https://alcortez-code.github.io/" />
+        <meta property="og:url"                content="https://iamtonysoftwaredev.github.io/" />
         <meta property="og:type"               content="website" />
         <meta property="og:title"              content="alcortez" />
         <meta property="og:description"        content="Internet is my bestfriend..." />
-        <meta property="og:image"              content="https://s-media-cache-ak0.pinimg.com/originals/5f/d0/98/5fd09817be8a9f5889064ac8bad39961.jpg" />
+        <meta property="og:image"              content="app/dist/src/img/link.PNG" />
     </head>
     <body id="top">
         <div class="uk-offcanvas-content">
@@ -24,7 +24,7 @@
             <div class="uk-hidden@m">
                 <nav class="uk-navbar uk-navbar-container uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
                      <div class="uk-navbar-center">
-                        <a class="uk-navbar-item uk-logo text-cursive" href="https://alcortez-code.github.io" uk-scroll>AL CORTEZ</a> 
+                        <a class="uk-navbar-item uk-logo text-cursive" href="https://iamtonysoftwaredev.github.io" uk-scroll>TONY</a> 
                     </div> 
                     <div class="uk-navbar-right">
                         <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-usage" uk-toggle></a>
@@ -32,7 +32,7 @@
                 </nav>
             </div>
             <div class="uk-visible@m">
-                <nav class="uk-navbar uk-navbar-container uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
+                <nav class="uk-navbar uk-navbar-container uk-navbar-transparent uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
                     <div class="uk-navbar-center">
                         <div class="uk-navbar-center-left">
                             <div>
@@ -43,12 +43,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <a class="uk-navbar-item uk-logo text-cursive" href="#top" uk-scroll>AL CORTEZ</a>
+                        <a class="uk-navbar-item uk-logo text-cursive" href="#top" uk-scroll>TONY</a>
                         <div class="uk-navbar-center-right">
                             <div>
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#certification" uk-scroll>Certification</a></li>
-                                    <li><a class="text-orange" href="https://alcortez-code.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="https://iamtonysoftwaredev.github.io/blog/" target="_blank">Blog</a></li>
                                     <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
@@ -60,19 +60,20 @@
 
             <!-- INTRO -->
             <div class="uk-background-norepeat uk-background-fixed uk-background-cover uk-section uk-padding-remove-vertical uk-flex uk-flex-middle" 
-                uk-height-viewport="offset-top: true" style="background-image: url(app/src/img/dreaming.jpg);">
+                uk-height-viewport="offset-top: true" style="background-image: url(app/src/img/deepvoid.jpg);">
                 <div class="uk-container">
                     <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                         <div id="intro" class="uk-text-center" uk-scrollspy="cls: uk-animation-slide-bottom-medium; repeat: true">
                             <h1 class="uk-margin-remove-bottom uk-heading-hero">I AM TONY</h1>
-                            <p class="uk-margin-remove-top">Software Engineer | Information Systems Specialist | Technical Consultant</p>
+                            <p class="uk-margin-remove-top">Software Engineer / Information Systems Specialist / Technical Consultant/Programmer Analyst</p>
                             <blockquote id="quotation" cite="#">
-                                <p class="uk-margin-small-bottom">"Hardwork betrays none, but dreams betray many"</p>
+                                <p class="uk-margin-large-top uk-margin-small-bottom">"Hardwork betrays none, but dreams betray many"</p>
                                 <footer>Hikigaya Hachiman</footer>
                             </blockquote> 
                             <div class="uk-inline">
-                                <a href="https://github.com/alcortez-code" class="uk-icon-button uk-margin-small-right" uk-icon="icon: github"></a>
+                                <a href="https://github.com/iamtonysoftwaredev" class="uk-icon-button" uk-icon="icon: github"></a>
                                 <a href="https://www.linkedin.com/in/iamtonysoft/" class="uk-icon-button" uk-icon="icon: linkedin"></a>
+                                <a href="https://www.facebook.com/syntax.error.undefined" class="uk-icon-button" uk-icon="icon: facebook"></a>
                             </div>
                         </div>
                     </div>
@@ -84,13 +85,13 @@
                 <div class="uk-container">
                     <div class="uk-grid uk-child-width-1-2@m" uk-grid>
                         <div class="uk-text-center uk-text-center@s" uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
-                            <img src="app/src/img/avatar-3.jpg" alt>
+                            <img src="app/src/img/ms.jpg" alt>
                             <h1 class="uk-heading-line uk-text-center"><span>About Me</span></h1>
                         </div>
                         <div class="uk-margin-remove" uk-scrollspy="cls: uk-animation-slide-right; repeat: true">
                             <blockquote cite="#">
                                 <p class="uk-text-center uk-text-center@s uk-padding-small">
-                                    "I am a Software Engineer / Information Systems Specialist based on Philippines. 
+                                    "I am a Software Engineer currently residing in the Philippines. 
                                     I am fascinated about technology that is why I always challenge myself to improve and 
                                     create different types of applications for the end users."
                                 </p>
@@ -102,13 +103,13 @@
             </div>
 
             <!-- EXPERIENCE -->
-            <div id="experience" class="uk-section uk-section-secondary uk-padding-remove-vertical uk-flex uk-flex-middle" uk-height-viewport="offset-top: true">
-                
+            <div id="experience" class="uk-section uk-section-secondary uk-flex uk-flex-middle" uk-height-viewport="offset-top: true">
                 <div class="uk-container" uk-scrollspy="cls: uk-animation-fade; repeat: true">
-                    <h3 class="uk-text-center uk-text-center@s uk-padding-large uk-heading-line"><span>WORK EXPERIENCE</span></h3>
-                    <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
-                        <div class="uk-text-center uk-text-center@s">
-                            <h3 class="uk-margin-remove">Software Engineer</h3>
+                    <h3 class="uk-text-center uk-text-center@s uk-padding-small uk-heading-line uk-margin-remove-bottom"><span>WORK EXPERIENCE</span></h3>
+                    <div class="uk-child-width-1-4@m" uk-grid>
+                        <div class="uk-text-center@s">
+                            <img class="uk-border-circle" src="app/src/img/mgi.png">
+                            <h4 class="uk-margin-top">Software Engineer</h4>
                             <p class="uk-margin-remove">MobileGroup, Inc. (July 2014 - August 2016)</p>
                             <p>Industry: Computer / Information Technology (Software)</p>
                             <p>Projects: 
@@ -119,19 +120,29 @@
                             </p>
                             <p>Responsibilities: Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET</p>
                         </div>
-                        <div class="uk-text-center uk-text-center@s">
-                            <h3 class="uk-margin-remove">Information Systems Specialist</h3>
+                        <div class="uk-text-center@s">
+                            <img class="uk-border-circle" src="app/src/img/fdc.png">
+                            <h3 class="uk-margin-top">Information Systems Specialist</h3>
                             <p class="uk-margin-remove">FDC Utilities, Inc. (August 2016 - December 2016)</p>
                             <p>Industry: Utilities / Power</p>
                             <p>Project: Energy Trading and Risk Management</p>
                             <p>Responsibilities: Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</p>
                         </div>
-                        <div class="uk-text-center uk-text-center@s">
-                            <h3 class="uk-margin-remove">Technical Consultant</h3>
-                            <p class="uk-margin-remove">FastTrack Solutions, Inc. (April 2018 - Present)</p>
+                        <div class="uk-text-center@s">
+                            <img class="uk-border-circle" src="app/src/img/ft.png">
+                            <h3 class="uk-margin-top">Technical Consultant</h3>
+                            <p class="uk-margin-remove">FastTrack Solutions, Inc. (April 2018 - July 2019)</p>
                             <p>Industry: Computer / Information Technology (Software) / Consultancy / ERP</p>
-                            <p>Project: SAP B1 Portal</p>
+                            <p>Projects: SAP B1 Portal (Cellprime Distribution Corp., Asian Transmission Corp., Vivant Corp.), SAP B1 Integration (Manila Polo Club Inc., Citistores Inc., Vivant Corp.)</p>
                             <p>Responsibilities: Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</p>
+                        </div>
+                        <div class="uk-text-center@s">
+                            <img class="uk-border-circle" src="app/src/img/ew.png">
+                            <h3 class="uk-margin-top">Programmer Analyst</h3>
+                            <p class="uk-margin-remove">Eastwest Banking Corporation (July 2019 - Present)</p>
+                            <p>Industry: Banking</p>
+                            <p>Projects: Retail, SelfService, Enrollment, MobileApp</p>
+                            <p>Responsibilities: Sprint Developer</p>
                         </div>
                     </div>
                 </div>
@@ -203,14 +214,14 @@
                     <div class="uk-container">
                         <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                             <div class="uk-text-center uk-text-center@s uk-position-center">
-                                <h3 class="uk-heading-line"><span class="text-cursive">AL CORTEZ</span></h3>
+                                <h3 class="uk-heading-line"><span class="text-cursive">TONY</span></h3>
                                 <ul id="menu-list" class="uk-list">
-                                    <li><a href="https://alcortez-code.github.io">Home</a></li>
+                                    <li><a href="https://iamtonysoftwaredev.github.io">Home</a></li>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#experience">Experience</a></li>
                                     <li><a href="#skills">Skills</a></li>
                                     <li><a href="#certification">Certification</a></li>
-                                    <li><a class="text-orange" href="https://alcortez-code.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="https://iamtonysoftwaredev.github.io/blog/" target="_blank">Blog</a></li>
                                     <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
@@ -221,7 +232,7 @@
             </div>
 
         </div>
-    <script src="app/dist/js/common.bundle.js"></script>    
+    <!--         -->
     <script src="app/dist/js/app.bundle.js"></script>
     </body>
 </html>
