text-center Work Experience

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div id="experience" class="uk-section uk-section-secondary uk-flex uk-flex-middle" uk-height-viewport="offset-top: true">
                 <div class="uk-container" uk-scrollspy="cls: uk-animation-fade; repeat: true">
                     <h3 class="uk-text-center uk-text-center@s uk-padding-small uk-heading-line uk-margin-remove-bottom"><span>WORK EXPERIENCE</span></h3>
-                    <div class="uk-child-width-1-4@m" uk-grid>
+                    <div class="uk-text-center uk-child-width-1-4@m" uk-grid>
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/mgi.png">
                             <h4 class="uk-margin-top">Software Engineer</h4>
