--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:type"               content="website" />
         <meta property="og:title"              content="alcortez" />
         <meta property="og:description"        content="Internet is my bestfriend..." />
-        <meta property="og:image"              content="app/dist/src/img/link.PNG" />
+        <meta property="og:image"              content="https://scontent.fmnl17-2.fna.fbcdn.net/v/t1.0-9/s960x960/78172741_2356057038038780_8309517169381605376_o.jpg?_nc_cat=110&_nc_sid=dd9801&_nc_eui2=AeHTeHoYUH1N2UbVfFyE4TfPewkpcOADnfh7CSlw4AOd-O35P9TWSXBfrbhzjITuCcnPzNsyZJVL-3-Yqbh6ohwd&_nc_ohc=rXDdnJeCXpIAX_tv4Bh&_nc_ht=scontent.fmnl17-2.fna&_nc_tp=7&oh=89ebfe6f392ef927816cbb346f203f27&oe=5EEE4AEE" />
     </head>
     <body id="top">
         <div class="uk-offcanvas-content">
