off-cavas links

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
                     <div class="uk-container">
                         <div class="uk-grid uk-child-width-1-1@m" uk-grid>
-                            <div class="uk-text-center uk-text-center@s uk-position-center">
+                            <div class="uk-text-center@s uk-position-center">
                                 <h3 class="uk-heading-line"><span class="text-cursive">TONY</span></h3>
                                 <ul id="menu-list" class="uk-list">
                                     <li><a href="https://iamtonysoftwaredev.github.io">Home</a></li>
