--- a/index.html
+++ b/index.html
@@ -109,40 +109,102 @@
                     <div class="uk-text-center uk-child-width-1-4@m" uk-grid>
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/mgi.png">
-                            <h4 class="uk-margin-top">Software Engineer</h4>
-                            <p class="uk-margin-remove">MobileGroup, Inc. (July 2014 - August 2016)</p>
-                            <p>Industry: Computer / Information Technology (Software)</p>
-                            <p>Projects: 
-                                <a class="text-orange" href="https://www.robinsonsmovieworld.com/" target="_blank">Robinsons Movieworld</a>,  
-                                <a class="text-orange" href="http://limketkaicinemas.com/" target="_blank">Limketkai Cinemas</a>, 
-                                <a class="text-orange" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank">FisherBoxOffice Fishermall</a>, 
-                                <a class="text-orange" href="https://smtickets.com/" target="_blank">SM Tickets</a>
-                            </p>
-                            <p>Responsibilities: Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET</p>
+                            <h4 class="uk-margin-top">Software Engineer at MobileGroup, Inc.</h4>
+                            <table class="uk-table">
+                                <!-- <caption>Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET</caption> -->
+                                <tbody>
+                                    <tr>
+                                        <td>July 2014 - August 2016</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Industry: Computer / Information Technology (Software)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Projects
+                                            <ul class="uk-list">
+                                                <li><a class="text-orange" href="https://www.robinsonsmovieworld.com/" target="_blank">Robinsons Movieworld</a></li>
+                                                <li><a class="text-orange" href="http://limketkaicinemas.com/" target="_blank">Limketkai Cinemas</a></li>
+                                                <li><a class="text-orange" href="http://fisherboxoffice.fishermall.com.ph/" target="_blank">FisherBoxOffice Fishermall</a></li>
+                                                <li><a class="text-orange" href="https://smtickets.com/" target="_blank">SM Tickets</a></li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/fdc.png">
-                            <h3 class="uk-margin-top">Information Systems Specialist</h3>
-                            <p class="uk-margin-remove">FDC Utilities, Inc. (August 2016 - December 2016)</p>
-                            <p>Industry: Utilities / Power</p>
-                            <p>Project: Energy Trading and Risk Management</p>
-                            <p>Responsibilities: Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</p>
+                            <h4 class="uk-margin-top">Information Systems Specialist at FDC Utilities, Inc.</h4>
+                            <table class="uk-table">
+                                <!-- <caption>Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</caption> -->
+                                <tbody>
+                                    <tr>
+                                        <td>August 2016 - December 2016</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Industry: Utilities / Power</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Projects
+                                            <ul class="uk-list">
+                                                <li>Energy Trading and Risk Management</li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/ft.png">
-                            <h3 class="uk-margin-top">Technical Consultant</h3>
-                            <p class="uk-margin-remove">FastTrack Solutions, Inc. (April 2018 - July 2019)</p>
-                            <p>Industry: Computer / Information Technology (Software) / Consultancy / ERP</p>
-                            <p>Projects: SAP B1 Portal (Cellprime Distribution Corp., Asian Transmission Corp., Vivant Corp.), SAP B1 Integration (Manila Polo Club Inc., Citistores Inc., Vivant Corp.)</p>
-                            <p>Responsibilities: Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</p>
+                            <h3 class="uk-margin-top">Technical Consultant at FastTrack Solutions, Inc.</h3>
+                            <table class="uk-table">
+                                <!-- <caption>Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</caption> -->
+                                <tbody>
+                                    <tr>
+                                        <td>April 2018 - July 2019</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Industry: Utilities / Power</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Projects
+                                            <ul class="uk-list">
+                                                <li>SAP B1 Portal (Cellprime Distribution Corp., Asian Transmission Corp., Vivant Corp.)</li>
+                                                <li>SAP B1 Integration (Manila Polo Club Inc., Citistores Inc., Vivant Corp.)</li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/ew.png">
-                            <h3 class="uk-margin-top">Programmer Analyst</h3>
-                            <p class="uk-margin-remove">Eastwest Banking Corporation (July 2019 - Present)</p>
-                            <p>Industry: Banking</p>
-                            <p>Projects: Retail, SelfService, Enrollment, MobileApp</p>
-                            <p>Responsibilities: Sprint Developer</p>
+                            <h4 class="uk-margin-top">Programmer Analyst at Eastwest Banking Corporation</h4>
+                            <table class="uk-table">
+                                <!-- <caption>Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</caption> -->
+                                <tbody>
+                                    <tr>
+                                        <td>July 2019 - Present</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Industry: Banking</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            Projects
+                                            <ul class="uk-list">
+                                                <li><a class="text-orange" href="https://personal.eastwestbanker.com/Retail/servletcontroller" target="_blank">Retail Banking</a></li>
+                                                <li><a class="text-orange" href="https://personal.eastwestbanker.com/enrollment/servletcontroller" target="_blank">Debit/Credit Card Enrollment</a></li>
+                                                <li><a class="text-orange" href="https://personal.eastwestbanker.com/selfservice/servletcontroller" target="_blank">SelfService Facility</a></li>
+                                                <li>MobileApp</li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -151,6 +213,7 @@
             <!-- SKILLS -->
             <div id="skills" class="uk-section uk-padding-remove-vertical uk-flex uk-flex-middle" uk-height-viewport="offset-top: true">
                 <div class="uk-container">
+                    <h3 class="uk-text-center uk-text-center@s uk-padding-small uk-heading-line uk-margin-remove-bottom"><span>SKILL TREE</span></h3>
                     <div class="uk-grid uk-child-width-1-1@m" uk-grid>
                         <div uk-lightbox="animation: scale">
                             <a href="app/src/img/skills.png" caption="Skills That I Learned Through Experience"><img src="app/src/img/skills.png" alt></a>
@@ -162,7 +225,7 @@
             <!-- CERTIFICATION -->
             <div id="certification" class="uk-section uk-section-secondary uk-light uk-padding-remove-vertical uk-flex uk-flex-middle" uk-height-viewport="offset-top: true">
                 <div class="uk-container" uk-scrollspy="cls: uk-animation-scale-up; repeat: true">
-                    <h3 class="uk-padding-large uk-heading-line"><span>MICROSOFT VIRTUAL ACADEMY CERTIFICATION</span></h3>
+                    <h3 class="uk-text-center uk-padding-small uk-heading-line"><span>MICROSOFT VIRTUAL ACADEMY CERTIFICATION</span></h3>
                     <div class="uk-grid uk-child-width-1-3@m" uk-grid>
                         <div class="uk-text-center uk-text-center@s">
                             <a href="app/src/file/MVA-1.pdf" target="_blank"><img src="app/src/img/pdf.png" alt=""></a>
