updated caption wordings

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <img class="uk-border-circle" src="app/src/img/mgi.png">
                             <h4 class="uk-margin-top">Software Engineer at MobileGroup, Inc.</h4>
                             <table class="uk-table">
-                                <!-- <caption>Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET</caption> -->
+                                <caption>Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET</caption>
                                 <tbody>
                                     <tr>
                                         <td>July 2014 - August 2016</td>
@@ -137,7 +137,7 @@
                             <img class="uk-border-circle" src="app/src/img/fdc.png">
                             <h4 class="uk-margin-top">Information Systems Specialist at FDC Utilities, Inc.</h4>
                             <table class="uk-table">
-                                <!-- <caption>Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</caption> -->
+                                <caption>Data Gathering, Designing ERD and Database Structure, Developed an API with the Front-End Application</caption>
                                 <tbody>
                                     <tr>
                                         <td>August 2016 - December 2016</td>
@@ -160,7 +160,7 @@
                             <img class="uk-border-circle" src="app/src/img/ft.png">
                             <h4 class="uk-margin-top">Technical Consultant at FastTrack Solutions, Inc.</h4>
                             <table class="uk-table">
-                                <!-- <caption>Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</caption> -->
+                                <caption>Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</caption>
                                 <tbody>
                                     <tr>
                                         <td>April 2018 - July 2019</td>
@@ -184,7 +184,7 @@
                             <img class="uk-border-circle" src="app/src/img/ew.png">
                             <h4 class="uk-margin-top">Programmer Analyst at Eastwest Banking Corporation</h4>
                             <table class="uk-table">
-                                <!-- <caption>Data Gathering, Design an Entity Relationship Diagram and Database Structure, Developed an API with the Front-End Application</caption> -->
+                                <caption>Sprint Developer that delivers enhancements, bug fix & new functionalities for 2 to 4 weeks per sprint</caption>
                                 <tbody>
                                     <tr>
                                         <td>July 2019 - Present</td>
